#pragma once
#include <iostream>
#include "Ijsonio.h"
#include <fstream>

using namespace std;

namespace TAX_RATES {
	const double CAR_TAX = 0.0007;
	const double CAR_TRUCK_TAX = 0.007;
	const double CAR_LUXURY_TAX = 0.027;
	const double Apartment_TAX = 0.001;
	const double Apartment_LUXURY_TAX = 0.004;
	const double COUNTRY_HOUSE_TAX = 0.01;

	const double LOW_HORSEPOWER = 100;
	const double HIGH_HORSEPOWER = 200;
	const unsigned int LIMIT_DISTANCE_FROM_CITY = 30;
	const int LIMIT_Apartment_SQUARE = 100;
}

class Property: public Ijsonio {
protected:
	size_t worth;
public:
	Property() : worth(0) {}
	Property(size_t worth);
	size_t get_worth();
	virtual double calculatePropertyTax() const = 0;
	double calculateIncomeTax() const;
	virtual void printProperty(ostream& out) = 0;
	friend ostream& operator<< (ostream& out, Property& pr);
	virtual void fromJson(nlohmann::json json) = 0;
	virtual nlohmann::json toJson() = 0;
	virtual ~Property();
};

